/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package hbase.pb;

option java_package = "org.apache.hadoop.hbase.shaded.coprocessor.example.generated";
option java_outer_classname = "BulkDeleteProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "Client.proto";

message BulkDeleteRequest {
  required Scan scan = 1;
  required DeleteType deleteType = 2;
  optional uint64 timestamp = 3;
  required uint32 rowBatchSize = 4;

  enum DeleteType {
    ROW = 0;
    FAMILY = 1;
    COLUMN = 2;
    VERSION = 3;
  }
}

message BulkDeleteResponse {
  required uint64 rowsDeleted = 1;
  optional uint64 versionsDeleted = 2;
}

service BulkDeleteService {
  rpc delete(BulkDeleteRequest)
    returns (BulkDeleteResponse);
}
